made the hamburger menu fixed on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -86,6 +86,10 @@ i {
   font-weight: bold;
 }
 
+.sidenav-trigger {
+  position: fixed;
+}
+
 /* for screens smaller than 993px... */
 @media only screen and (max-width : 992px) {
   /* hide sidenav */
